...
        setEditingStage({
          times: 1,
          stages: [{ duration: Timespan.fromMinutes(10), bmp: 142, speedType: 'bmp', type: 'simple' }],
        })
      }
    >
      <ButtonText>Add Stage</ButtonText>
    </Button>
  );
}

export default function ProgramEditScreen() {
  const router = useRouter();
...
